# template_clean_architecture

./: .dockerignore  .env.template  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
src/: config.py
src/adapters/: book.py
src/api/: main.py  router.py
src/api/admin/: author.py  book.py
src/api/routers/: author.py  book.py
src/containers/: container.py  gateways.py  registrar.py  repos_container.py  use_cases.py
src/data/database/migrations/: env.py
src/data/database/migrations/versions/: 2022-03-05_18:44_00bfac279db0_author.py  2022-03-07_15:16_2553394d1d6c_author_default_id.py  2bc1046f14a7_init.py  78924b0aa72f_book.py
src/data/event_repositories/: book.py
src/data/models/: __init__.py  author.py  book.py
src/data/repositories/: author.py  book.py
src/domain/author/: interfaces.py
src/domain/author/dto/: author.py  filter_schema.py
src/domain/author/use_cases/: __init__.py  get_author.py
src/domain/book/: interfaces.py
src/domain/book/dto/: book.py  book_admin.py  events.py  filter_schema.py
src/domain/book/use_cases/: __init__.py  book_deleted.py  book_updated.py  create_book.py  delete_book.py  get_book.py  list_books.py  update_book.py
src/worker/: __main__.py  app.py
tests/: conftest.py
tests/example/: factories.py  test_module_testing.py
tests/example/test_api/: test_book.py
tests/example/test_event_repositorys/: test_book_internal.py
tests/example/test_use_cases/: test_book.py
tests/example/test_workers/: test_external.py
